@@ -1,8 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
 Type=Application
-Name=Panel
-#Comment=
+_Name=Panel
+_Comment=Launch other applications and provide various utilities to manage windows, show the time, etc.
 Icon=gnome-panel
 Exec=gnome-panel
 StartupNotify=true
