@@ -1,3 +1,11 @@
+2007-05-13  Vincent Untz  <vuntz@gnome.org>
+
+	* gnome-panel.desktop.in.in: renamed from gnome-panel.desktop.in and
+	add a comment
+	* panel-context-menu.c: (panel_context_menu_show_about_dialog): update
+	description to be less geeky
+	* Makefile.am: updated
+
 2007-05-12  Vincent Untz  <vuntz@gnome.org>
 
 	* panel-ditem-editor.c: (type_combo_changed): change mnemonic for
